--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node ./src/server.js"
+    "dev": "node --watch ./src/server.js"
   },
   "_moduleAliases": {
     "@": "./src",
